# tools

./: Dockerfile  README.md  docker_tag.sh  pastix_5.2.2.22.tar.bz2
poc-solvers/: AUTHORS  DEPENDENCIES_NOT_ROOT.rst  EXPERTS  INSTALL.sh  Makefile.zdhips  README  VERSION  modulefile
poc-solvers/UFconfig/: Makefile  UFconfig.mk
poc-solvers/src/: CMakeLists.txt  UFconfig.h  buffers.h  convert.cpp  convertz.cpp  cs.h  cxsparse-interface.cpp  d-factorize.cpp  d-solve.cpp  d-utilities.cpp  diagonal-interface.cpp  dynamic.cpp  functions.cpp  gmres-interface.cpp  hips-interface.cpp  initialise.cpp  lapack-interface.cpp  linear-gmres.cpp  linear-gmres.h  matrix-format.cpp  matrix.cpp  matrix_io.h  mpi-communications.cpp  mpi-communications.h  mpi-reducers.cpp  mpi-reducers.h  mpi-utilities.cpp  mumps-interface.cpp  parallel-reducers.cpp  pastix-interface.cpp  perftimer.h  petsc-interface.cpp  poc-assertions.h  poc-solvers.cpp  poc-solvers.cpp.backup  poc-solvers.h  read_mat.cpp  solver.cpp  solverlib.h  solvers-functions.h  (+9 more)
tools/: AUTHORS  DEPENDENCIES_NOT_ROOT.rst  Doxyfile  Makefile.am  Makefile.hgftp  NOTES.html  README  VERSION  configure.ac  sorter.py
tools/data/: Makefile.am  literature.bib  ttb.tex
tools/objects/: Makefile.am
tools/scripts/: README_GLOSS  tg_detidor_slurm.gloss.sh  tg_display_stats.py  tg_slurm_detidor.2y.sh  tg_update_gloss_db.sh
tools/src/: RDI-converter.cpp  REF_6371_loading_green_functions-CoM.h  REF_6371_loading_green_functions.h  SBprofiler-io.cpp  SBprofiler.cpp  academic-estuary.cpp  academic.h  academics.cpp  adcp-io.cpp  adcp.cpp  admittance-mts.cpp  admittance-mts.h  admittance.cpp  admittance.h  altimetry-decimate.cpp  altimetry-detidor.cpp  altimetry-error.cpp  altimetry-filter.cpp  altimetry.cpp  altimetry.h  analysis-ecoop.cpp  analysis-tugo.cpp  analysis.cpp  archive-cdf.cpp  archive-clx.cpp  archive.cpp  archive.def  archive.h  ascii.cpp  ascii.h  atlas2obc.cpp  beta.cpp  biquadFilterDF2.py  bmg.h  bmg01.cpp  bmg_fe.cpp  cefmo.h  cleanCmdline.py  clock.cpp  cm93toXYZ.cpp  (+420 more)
tools/src/archive/: altimetry-spectrum.cpp  atlas-admittance.cpp  legend02.cpp  pocnetcdf_2f.cpp
tools/src/sts/: BC_det.cpp  IWdrag.cpp  boundary-init.cpp  boundary2d-generic.cpp  boundary2d-obsolete.cpp  cefmo-friction.cpp  cefmo.cpp  cefmo.h  cefmo2D-Q1xQ0.cpp  cefmo2D.cpp  configure-hugo.cpp  drag.hpp  dry.h  exceptions.hpp  forcing.cpp  friction-additional.cpp  friction.cpp  harmonic-initialise.cpp  ice.h  init_config.hpp  init_config_constructor.cpp  init_config_read.cpp  initialise2D.cpp  keywords.hpp  main.cpp  mesh.cpp  misc.cpp  mog2d.cpp  momentum2d.cpp  operators.cpp  parameters.cpp  polygons-exceptions.hpp  regular-tides.cpp  specification.h  tide-obc.cpp  tmatrix.h  topography.cpp  tugo-classes.h  tugo-commons.h  tugo-prototypes.h
